<resources>
    <string name="app_name">马拉兹检测</string>

    <!-- Strings related to login -->
    <string name="prompt_account">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="error_empty_username">帐号不能为空</string>
    <string name="error_empty_password">密码不能为空</string>
    <string name="error_invalid_username">帐号格式不正确</string>
    <string name="error_invalid_password">密码格式不正确</string>
    <string name="error_incorrect_password">密码和账户名不匹配</string>

    <string name="error_empty_team_group">尚未选择工位/班组</string>

    <string name="tx_cancel">取 消</string>
    <string name="tx_determine">确定</string>
    <string name="tx_back">返回</string>
    <string name="tx_exit">退出</string>
    <string name="tx_logout">注销</string>

    <string name="network_tips">您已进入没有网络的异次元,请检查您的网络!</string>
    <string name="tx_no_network">请求网络失败</string>

    <string name="tx_no_data">暂无数据，轻触屏幕重试</string>
    <string name="tx_reload">网络异常，轻触屏幕重试</string>

    <string-array name="inspect_type_name">
        <item> 基本信息 </item>
        <item> 尺寸 </item>
        <item> 性能 </item>
        <item> 外观 </item>
    </string-array>

    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="tx_search">搜索</string>
    <string name="tx_filter">筛选</string>
    <string name="tx_not_begin_search">尚未筛选</string>

    <string name="search_customerName">客户</string>
    <string name="search_requireDate">发货日期</string>
    <string name="search_equipmentNo">出货计划单号</string>
    <string name="search_docNo">设备号</string>
    <string name="search_custNo">客户订单号</string>

    <string name="check_list">检测列表</string>
    <string name="check_detail">检测详情</string>

    <string name="not_start_check_product">未开始检验单</string>
    <string name="process_check_product">进行中检验单</string>
    <string name="finished_check_product">已完成检验单</string>

    <string name="income_check">来料检(%1$d)</string>
    <string name="process_check">过程检(%1$d)</string>
    <string name="shipments_check">出货检(%1$d)</string>
    <string name="nc_check">NC检(%1$d)</string>

    <string name="purchase_order_id">采购订单号: %1$s</string>
    <string name="material_id_append">物料号: %1$s</string>
    <string name="material_name_append">物料名称: %1$s</string>
    <string name="income_material_count_append">来料数量: %1$s</string>
    <string name="check_date">检验日期: %1$s</string>
    <string name="supplier_append">供应商: %1$s</string>
    <string name="check_order_id">检验单号: %1$s</string>
    <string name="completion">完成度: %1$s</string>

    <string name="purchase_order">采购订单</string>
    <string name="supplier">供应商</string>
    <string name="material_id">物料号</string>
    <string name="material_name">物料名称</string>
    <string name="qm_no">QM NO</string>
    <string name="income_material_count">来料数量</string>
    <string name="sample_plan">抽样方案</string>
    <string name="inspector">检查员</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="surface">外观</string>
    <string name="dimension">尺寸</string>
    <string name="performance">性能</string>

    <string name="pick_from_capture">拍照</string>
    <string name="pick_from_gallery">从相册选择</string>

    <string name="start_check">开始检查</string>
    <string name="revocation_check">撤销检查</string>
    <string name="submit">提交</string>
    <string name="tv_please_pick">请选择 发货日期</string>

</resources>
