<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.check.gf.gfapplication.view.HeaderLayout
        android:id="@+id/top_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ll_order_type"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_below="@id/top_title_bar"
        android:background="@color/blue_confirm"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_income_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/income_check"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_process_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/process_check"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_shipments_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/shipments_check"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_NC_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/nc_check"
            android:textColor="@color/white" />
    </LinearLayout>

    <include
        layout="@layout/include_anything_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_order_type" />

    <com.mingle.widget.LoadingView
        android:id="@+id/loadView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/top_title_bar"
        android:background="@color/white"
        android:visibility="gone" />
</RelativeLayout>