<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:gravity="right|center_vertical">

                    <LinearLayout
                        android:id="@+id/ll_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/purchase_order"
                            android:textSize="@dimen/ts_normal"
                            android:paddingTop="16dp"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:text="@string/supplier"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:text="@string/material_id"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:text="@string/material_name"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:text="@string/qm_no"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:text="@string/income_material_count"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:text="@string/sample_plan"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:text="@string/inspector"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:text="@string/start_time"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:text="@string/end_time"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:text="@string/surface"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:text="@string/dimension"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:text="@string/performance"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>
                    </LinearLayout>

                   <View
                       android:layout_width="1dp"
                       android:layout_height="wrap_content"
                       android:background="@color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_right"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_weight="5"
                    android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_purchase_order_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/ts_normal"
                            android:paddingTop="16dp"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/tv_supplier"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/tv_material_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/tv_material_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/tv_qm_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/tv_income_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/tv_sample_plan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/tv_inspector"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/tv_start_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/tv_end_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/tv_surface"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/tv_dimension"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/tv_performance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:textSize="@dimen/ts_normal"
                            android:textColor="@color/white"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_start_check"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:gravity="center"
                    android:text="@string/start_check"
                    android:textSize="@dimen/ts_big"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_corner_2dp_line"/>

                <TextView
                    android:id="@+id/tv_submit"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textSize="@dimen/ts_big"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_corner_2dp_line"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>